# buffer-benchmarks

./: README.md
rust/: Cargo.toml  build.rs
rust/benches/: buffer_benchmarks.rs
rust/src/: capnps.rs  lib.rs  prost.rs
rust/src/flatbuffers/: message_generated.rs
schemas/: message.capnp  message.proto
