[package]
name = "buffer-benchmarks"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.3.0"
flatbuffers = "25.9.23"
prost = "0.14.1"
protobuf = "3.7.2"
capnp = "0.23.0"


[build-dependencies]
capnpc = "0.23.0"
prost-build = "0.14.1"
protobuf-codegen = "3.7.2"

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "buffer_benchmarks"
harness = false
